--- a/Installer/README
+++ b/Installer/README
@@ -1,23 +1,17 @@
-MySQL for Excel 1.3
+Copyright (c) 2012, 2019, Oracle and/or its affiliates. All rights reserved. 
 
-This is a release of MySQL for Excel, Oracle's dual-
-license utility addin for Microsoft Excel.  For the avoidance of
-doubt, this particular copy of the software is released
-under the version 2 of the GNU General Public License.
-MySQL for Excel is brought to you by Oracle.
+This is a release of MySQL for Excel, an Excel add-in enabling data analysts to very easily access and manipulate MySQL data within Microsoft Excel.
 
-Copyright (c) 2012, 2017, Oracle and/or its affiliates. All rights reserved.
+License information can be found in the LICENSE file. 
+This distribution may include materials developed by third parties. For license 
+and attribution notices for these materials, please refer to the LICENSE file. 
 
-License information can be found in the COPYING file.
+For more information on MySQL for Excel visit
+https://www.mysql.com/why-mysql/windows/excel/
+or
+https://dev.mysql.com/doc/mysql-for-excel/en/
 
-GPLv2 Disclaimer
-For the avoidance of doubt, except that if any license choice
-other than GPL or LGPL is available it will apply instead, 
-Oracle elects to use only the General Public License version 2 
-(GPLv2) at this time for any software where a choice of GPL 
-license versions is made available with the language indicating 
-that GPLv2 or any later version may be used, or where a choice 
-of which version of the GPL is applied is otherwise unspecified.
+For additional downloads and the source of MySQL for Excel visit
+https://dev.mysql.com/downloads/windows/excel/
 
-This software is OSI Certified Open Source Software.
-OSI Certified is a certification mark of the Open Source Initiative.
+MySQL for Excel is brought to you by the MySQL team at Oracle.
